kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: homework-deployment
  namespace: homework

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: homework

  template:
    metadata:
      labels:
        app: homework

    spec:
      nodeSelector:
        homework: "true"

      containers:
        - name: web
          image: busybox:1.37

          command:
            - sh
            - -c
            - |
              httpd -f -p 8000 -h /homework

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: homework-volume
              mountPath: /homework

            - name: homework-config
              mountPath: /homework/conf

          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5

          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm -f /homework/index.html

      volumes:
        - name: homework-volume
          persistentVolumeClaim:
            claimName: homework-pvc

        - name: homework-config
          configMap:
            name: homework-config
